--- a/GRUnlocker/GRUnlocker.csproj
+++ b/GRUnlocker/GRUnlocker.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -135,9 +136,13 @@
     <None Include="Resources\Ghostrunner_lvl9.sav" />
     <None Include="Resources\Hundo.sav" />
     <None Include="Resources\hundoHC.sav" />
+    <None Include="Resources\KRCut1.sav" />
+    <None Include="Resources\KRCut2.sav" />
+    <None Include="Resources\KRFull.sav" />
     <None Include="Resources\Levels.sav" />
     <None Include="Resources\newgame.sav" />
     <None Include="Resources\Newgame_collectiables.sav" />
+    <None Include="Resources\NGKR.sav" />
     <None Include="Resources\patch.sav" />
     <None Include="Resources\SwordsData.sav" />
   </ItemGroup>
@@ -151,12 +156,12 @@
   <ItemGroup>
     <PublishFile Include="Newtonsoft.Json">
       <Visible>False</Visible>
+      <PublishState>Include</PublishState>
+      <IncludeHash>True</IncludeHash>
       <Group>
       </Group>
       <TargetPath>
       </TargetPath>
-      <PublishState>Include</PublishState>
-      <IncludeHash>True</IncludeHash>
       <FileType>Assembly</FileType>
     </PublishFile>
   </ItemGroup>
